hphp/hack/test/typecheck/reactive/test_rx_classes1.php.exp
File "test_rx_classes1.php", line 24, characters 19-19:
Member f has the wrong type (Typing[4341])
File "test_rx_classes1.php", line 9, characters 19-19:
This function is local reactive.
File "test_rx_classes1.php", line 24, characters 19-19:
This function is non-reactive.
